// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A userName prop is provided should render correctly 1`] = `
<Layout
  description="Stravell | Travel social blog containing lot of articles about travels and activities. Travellers of the whole world share their experiences about the trip they've made. You can read, write or find articles about the best wanderlust!"
  title="Stravell | Stravell - Read, Write and Find Travel Articles From Travellers."
>
  <PageHeader
    title="Welcome, Sofiane"
  />
  <div
    className="content-container"
  >
    <Connect(FilterablePostList)
      SearchBarAutoFocus={true}
      noPostText="Become a legend by being the very first person to publish a post in here!"
      posts={Array []}
    />
  </div>
</Layout>
`;

exports[`no username prop is provided should render correctly 1`] = `
<Layout
  description="Stravell | Travel social blog containing lot of articles about travels and activities. Travellers of the whole world share their experiences about the trip they've made. You can read, write or find articles about the best wanderlust!"
  title="Stravell | Stravell - Read, Write and Find Travel Articles From Travellers."
>
  <PageHeader
    title="Welcome"
  />
  <div
    className="content-container"
  >
    <Connect(FilterablePostList)
      SearchBarAutoFocus={true}
      noPostText="Become a legend by being the very first person to publish a post in here!"
      posts={Array []}
    />
  </div>
</Layout>
`;
